Fix webpack setup

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   <title>Keep It App</title>
 </head>
 <body>
-  <script src="../dist/app.bundle.js"></script>
+  <script src="app.bundle.js"></script>
 </body>
 </html>
